--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     <img src="your_photo.jpg" alt="Your Photo" style="border-radius: 50%;" height="100" width="100">
     <h1>Rupesh Kumar Thakur</h1>
     <p>
-      <img src="phone_icon.png" alt="Phone Icon" height="16" width="16"> +91 9835271246<br>
-      <img src="email_icon.png" alt="Email Icon" height="16" width="16"> rupeshkumarthakur135@gmail.com<br>
+      <img src="phone_icon.png" alt="Phone Icon" height="16" width="16"> +91 9835271246
+      <img src="email_icon.png" alt="Email Icon" height="16" width="16"> rupeshkumarthakur135@gmail.com
       <img src="linkedin_icon.png" alt="LinkedIn Icon" height="16" width="16"> <a
         href="https://www.linkedin.com/in/rupesh-kumar-thakur-12a469212/" target="_blank">LinkedIn</a>
     </p>
